Fixed dropdown hiding on iPhone

--- a/www.bttbalumni.ca/css/bttbNav.css
+++ b/www.bttbalumni.ca/css/bttbNav.css
@@ -100,11 +100,11 @@
 .nav .dropdown .content
 {
     display:			none;
+    visibility:			hidden;
     position:			absolute;
     background-color:	#f9f9f9;
     min-width:			160px;
     box-shadow:			0 8px 16px 0 rgba(0,0,0,0.2);
-	z-index:			99;
 }
 
 /*----------------------------------------------------------------------
@@ -133,7 +133,9 @@
 */
 .nav .dropdown:hover .content
 {
-    display: block;
+    display:	block;
+    visibility:	visible;
+	z-index:	99;
 }
 
 /* ==================================================================
